# scrapy_freecodecamp_tutorial

./: pyproject.toml
.devcontainer/: devcontainer.json  onCreate.sh  postCreate.sh
bookscraper/: bookdata.json
bookscraper/bookscraper/spiders/: bookspider.py
