[tool.poetry]
name = "scrapy-freecodecamp-tutorial"
version = "0.1.0"
description = ""
authors = ["ivanlohvyn <i.logvyn@gmail.com>"]
readme = "README.md"
packages = [{include = "scrapy_freecodecamp_tutorial"}]

[tool.poetry.dependencies]
python = "^3.10"
scrapy = "^2.10.0"
autopep8 = "^2.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
